--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                   width="325"
                   class="card__picture"
                 />
-                <ul class="list__hover hover-buttons list">
+                <ul class="card__hover hover-buttons list">
                   <li class="hover-buttons__item list__item">
                     <button class="hover-buttons__button hover-buttons__button--heart"></button>
                   </li>
@@ -179,7 +179,7 @@
                   width="325"
                   class="card__picture"
                 />
-                <ul class="list__hover hover-buttons list">
+                <ul class="card__hover hover-buttons list">
                   <li class="hover-buttons__item list__item">
                     <button class="hover-buttons__button hover-buttons__button--heart"></button>
                   </li>
@@ -207,7 +207,7 @@
                   width="325"
                   class="card__picture"
                 />
-                <ul class="list__hover hover-buttons list">
+                <ul class="card__hover hover-buttons list">
                   <li class="hover-buttons__item list__item">
                     <button class="hover-buttons__button hover-buttons__button--heart"></button>
                   </li>
@@ -235,7 +235,7 @@
                   width="325"
                   class="card__picture"
                 />
-                <ul class="list__hover hover-buttons list">
+                <ul class="card__hover hover-buttons list">
                   <li class="hover-buttons__item list__item">
                     <button class="hover-buttons__button hover-buttons__button--heart"></button>
                   </li>
@@ -269,7 +269,7 @@
                   alt="woman shoes"
                   width="255"
                 />
-                <ul class="list__hover hover-buttons list">
+                <ul class="card__hover hover-buttons list">
                   <li class="hover-buttons__item list__item">
                     <button class="hover-buttons__button hover-buttons__button--heart"></button>
                   </li>
@@ -292,7 +292,7 @@
             <li class="list__item gallery__item">
               <div class="card__wrapper">
                 <img src="./images/product2.png" alt="belt" width="255" />
-                <ul class="list__hover hover-buttons list">
+                <ul class="card__hover hover-buttons list">
                   <li class="hover-buttons__item list__item">
                     <button class="hover-buttons__button hover-buttons__button--heart"></button>
                   </li>
@@ -315,7 +315,7 @@
             <li class="list__item gallery__item">
               <div class="card__wrapper">
                 <img src="./images/product3.png" alt="hat" width="255" />
-                <ul class="list__hover hover-buttons list">
+                <ul class="card__hover hover-buttons list">
                   <li class="hover-buttons__item list__item">
                     <button class="hover-buttons__button hover-buttons__button--heart"></button>
                   </li>
@@ -338,7 +338,7 @@
             <li class="list__item gallery__item">
               <div class="card__wrapper">
                 <img src="./images/product4.png" alt="small bag" width="255" />
-                <ul class="list__hover hover-buttons list">
+                <ul class="card__hover hover-buttons list">
                   <li class="hover-buttons__item list__item">
                     <button class="hover-buttons__button hover-buttons__button--heart"></button>
                   </li>
@@ -361,7 +361,7 @@
             <li class="list__item gallery__item">
               <div class="card__wrapper">
                 <img src="./images/product5.png" alt="bag" width="255" />
-                <ul class="list__hover hover-buttons list">
+                <ul class="card__hover hover-buttons list">
                   <li class="hover-buttons__item list__item">
                     <button class="hover-buttons__button hover-buttons__button--heart"></button>
                   </li>
@@ -384,7 +384,7 @@
             <li class="list__item gallery__item">
               <div class="card__wrapper">
                 <img src="./images/product6.png" alt="belt" width="255" />
-                <ul class="list__hover hover-buttons list">
+                <ul class="card__hover hover-buttons list">
                   <li class="hover-buttons__item list__item">
                     <button class="hover-buttons__button hover-buttons__button--heart"></button>
                   </li>
@@ -407,7 +407,7 @@
             <li class="list__item gallery__item">
               <div class="card__wrapper">
                 <img src="./images/product7.png" alt="shoes" width="255" />
-                <ul class="list__hover hover-buttons list">
+                <ul class="card__hover hover-buttons list">
                   <li class="hover-buttons__item list__item">
                     <button class="hover-buttons__button hover-buttons__button--heart"></button>
                   </li>
@@ -430,7 +430,7 @@
             <li class="list__item gallery__item">
               <div class="card__wrapper">
                 <img src="./images/product8.png" alt="glasses" width="255" />
-                <ul class="list__hover hover-buttons list">
+                <ul class="card__hover hover-buttons list">
                   <li class="hover-buttons__item list__item">
                     <button class="hover-buttons__button hover-buttons__button--heart"></button>
                   </li>
